--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -230,6 +230,9 @@
     <string name="smartlock_auto_unlock_title">Smartlock Auto Unlock</string>
     <string name="smartlock_auto_unlock_summary">Auto unlock if smartlock authenticated</string>
 
+    <string name="smartlock_lid_unlock_title">Smartcover Auto Unlock</string>
+    <string name="smartlock_lid_unlock_summary">Auto unlock on smartcover if smartlock authenticated</string>
+
     <string name="other_ui_title">Other UI tweaks</string>
     <string name="other_ui_summary">Various misc</string>
     <!-- Volume dialog timeout -->
