crowdin: import translation
Change-Id: Id2d317236f827ea9e3eacc4010a5822b5171c7f1

--- a/res/values-ru-rRU/strings.xml
+++ b/res/values-ru-rRU/strings.xml
@@ -17,6 +17,7 @@
  */
 -->
 <resources>
+    <string name="app_name">BaikalOS Extras</string>
     <!-- Dashboard -->
     <!-- Device parts -->
     <!-- Status bar -->
