Refactor UI. Add disable HWC switch.
Change-Id: I99701ab8fc8f5629c4ed3d4711820fac312c1747

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -24,7 +24,7 @@
     <!-- Dashboard -->
 
     <string name="user_interface_category">UI</string>
-    <string name="system_category">System</string>
+    <string name="system_category">BaikalOS Settings</string>
     <string name="other_category">Other</string>
 
     <!-- Device parts -->
