--- a/res/values-ru-rRU/strings.xml
+++ b/res/values-ru-rRU/strings.xml
@@ -20,7 +20,7 @@
     <string name="app_name">BaikalOS Extras</string>
     <!-- Dashboard -->
     <string name="user_interface_category">Интерфейс</string>
-    <string name="system_category">Система</string>
+    <string name="system_category">Настройки BaikalOS</string>
     <string name="other_category">Другое</string>
     <!-- Device parts -->
     <string name="device_part_title">Возможности устройства</string>
