Change some strings
Change-Id: Ia5adb29cf99931e9a9ba362b45ba9bc47588f03f

--- a/res/values-ru-rRU/strings.xml
+++ b/res/values-ru-rRU/strings.xml
@@ -250,15 +250,15 @@
     <string name="troubleshooting_reset_restrictions_summary">Сброс всех ограничений</string>
     <string name="troubleshooting_reset_restrictions_title">Сбросить ограничения</string>
     <string name="troubleshooting_log_title">Системные журналы</string>
-    <string name="log_it_title">Снять лог!</string>
+    <string name="log_it_title">Сохранить лог</string>
     <string name="log_it_summary">Logcat, kmesg, dmesg</string>
     <string name="logcat_title">Logcat</string>
     <string name="logcat_radio_title">Радио лог</string>
     <string name="kmesg_title">Kmesg</string>
     <string name="dmesg_title">Dmesg</string>
-    <string name="log_it_now_title">Вовлечение</string>
+    <string name="log_it_now_title">Сохранить</string>
     <string name="log_it_dialog_title">Логи собраны</string>
-    <string name="logcat_warning">Поделитесь им или GTFO!</string>
+    <string name="logcat_warning">Поделиться</string>
     <string name="share_title">Поделиться...</string>
     <string name="log_it_share_subject">Логи BaikalOS</string>
     <string name="log_it_now_summary">Ожидайте создания логов</string>
