--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -291,16 +291,16 @@
     <string name="troubleshooting_reset_restrictions_summary">Reset all Restrictions to Not Restricted</string>
     <string name="troubleshooting_reset_restrictions_title">Reset  Restrictions</string>
     <string name="troubleshooting_log_title">System Logs</string>
-    <string name="log_it_title">Log that shit!</string>
+    <string name="log_it_title">Save Logs</string>
     <string name="log_it_summary">Logcat, kmesg, dmesg</string>
 
     <string name="logcat_title">Logcat</string>
     <string name="logcat_radio_title">Radio log</string>
     <string name="kmesg_title">Kmesg</string>
     <string name="dmesg_title">Dmesg</string>
-    <string name="log_it_now_title">Engage</string>
-    <string name="log_it_dialog_title">Engage</string>
-    <string name="logcat_warning">Share it or GTFO!</string>
+    <string name="log_it_now_title">Save</string>
+    <string name="log_it_dialog_title">Save</string>
+    <string name="logcat_warning">Share it</string>
     <string name="share_title">Share...</string>
     <string name="log_it_share_subject">BaikalOS logs</string>
     <string name="log_it_now_summary">Be patient for the logs to be created</string>
